<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Attendance Viewer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="refreshbutton">Refresh</string>
    <string name="quickrefreshbutton">Quick Refresh</string>
    <string name="btnRefresh">Refresh</string>
    <string name="prevbutton">Previous Day</string>
    <string name="nextbutton">Next Day</string>
    <string name="title_activity_subject">Subject</string>
    <string name="about1">Attendance Viewer</string>
    <string name="about2">Version 3.0</string>
    <string name="about3">Supported Colleges:</string>
    <string name="about4">JIIT-128,JUET</string>
    <string name="about5">Developed by:</string>
    <string name="about6"><a href="http://facebook.com/indianseal">Sid Verma</a></string>
    <string name="about7">JUET - 2016</string>
    <string name="title_activity_about">About</string>

</resources>
