<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="left"
	    android:orientation="vertical"
	    android:padding="10dp" >

		<TextView
		    android:id="@+id/textView1"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/about1"
		    android:textSize="25sp" />
		<TextView
		    android:id="@+id/textView2"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/about2"
		    android:layout_marginBottom="20dp" />
		<TextView
		    android:id="@+id/textView3"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/about3" />
		<TextView
		    android:id="@+id/textView4"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/about4"
		    android:layout_marginBottom="15dp" />
		<TextView
		    android:id="@+id/textView5"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/about5" />
		<TextView
		    android:id="@+id/textView6"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/about6" />
		<TextView
		    android:id="@+id/textView7"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/about7" />
	</LinearLayout>

</ScrollView>